[gd_scene load_steps=2 format=3 uid="uid://d2vdw2c5u5u6b"]

[ext_resource type="Script" path="res://scripts/ui/pause_menu.gd" id="1_pause"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_pause")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -180.0
offset_right = 200.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0.25098, 1)
theme_override_font_sizes/font_size = 36
text = "⏸️ PAUSED"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="Panel/VBox"]
custom_minimum_size = Vector2(360, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "RESUME"

[node name="SettingsButton" type="Button" parent="Panel/VBox"]
custom_minimum_size = Vector2(360, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "SETTINGS"

[node name="MainMenuButton" type="Button" parent="Panel/VBox"]
custom_minimum_size = Vector2(360, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "MAIN MENU"

[node name="QuitButton" type="Button" parent="Panel/VBox"]
custom_minimum_size = Vector2(360, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "QUIT"
